set format button added at home

--- a/views/admin/adminpannel.ejs
+++ b/views/admin/adminpannel.ejs
@@ -471,6 +471,11 @@
       <h3>Add Student records</h3>
       <p>View and manage student records</p>
     </a>
+     <a href="/user" class="dashboard-card">
+     <i class="fa-solid fa-user-plus" style="color: #74C0FC;"></i>
+      <h3>Manage User</h3>
+      <p>Add or Delete Teacher, Modify Teacher data, Reset Password, Assigned Password</p>
+    </a>
   </div>
  
   </div>
