--- a/views/admin/subjectlist.ejs
+++ b/views/admin/subjectlist.ejs
@@ -536,7 +536,7 @@
     <%= editing ? "Update Subject" : "Add New Subject" %>
   </button>
 </form>
-<a href="/">Go to Data Entry</a>
+<center><a href="/"><button class="btn" style="background-color: green;color: white;"   ><i class="fa-solid fa-arrow-left" style="color: #ffffff;"></i>&ensp;Go to Data Entry</button></a></center>
 
 <script>
 // Function to fetch and autofill data from another class
