--- a/views/index.ejs
+++ b/views/index.ejs
@@ -387,7 +387,7 @@
     <div class="container">
         <div class="action-section">
             <div class="action-buttons">
-                <a href="/admin/subject"><button class="btn" style="background-color: green;color: white;"   >Set Question Paper Format</button></a>
+                <a href="/admin/subject"><button class="btn" style="background-color: green;color: white;"   ><i class="fa-solid fa-file-circle-question" style="color: #ffffff;"></i>Set Question Paper Format</button></a>
                 <a href="#subject-section" class="btn btn-primary action-btn">
                     <i class="fas fa-pen-to-square"></i> Enter Data
                 </a>
