--- a/views/admin/user.ejs
+++ b/views/admin/user.ejs
@@ -231,8 +231,8 @@
                 </div>
               </div>
               
-              <div class="row mb-3">
-                <div class="col-md-6">
+              <div class="entry row mb-3" style="border: 2px solid rgb(106, 108, 108);border-radius: 8px; padding: 1rem;display: flex;">
+                <div class="col-md-6" id="entry">
                   <label for="allowedSubjects" class="form-label">Allowed Subjects</label>
                   <div class="select-container">
                     <select name="allowedSubjects" id="allowedSubjects" class="form-select">
@@ -243,7 +243,7 @@
                       <% }); %>
                     </select>
                     <div class="select-icon">
-                      <i class="fas fa-chevron-down"></i>
+                      
                     </div>
                   </div>
                 </div>
@@ -296,10 +296,14 @@
                       <% }); %>
                       </optgroup>
                     <% }); %>
-                  </select><i class="fa-solid fa-circle-plus" style="color: #74C0FC;"></i>
+                  </select>
+                 
+                </div>
                 
                 </div>
-                </div>
+                 <button class="btn btn-outline-secondary" type="button" onclick="addsubject()">
+                    <i class="fa-solid fa-circle-plus" style="color: #74C0FC;"></i>
+                  </button>
               </div>
               
               <div class="mb-3">
@@ -327,8 +331,9 @@
                   <i class="fas fa-user-plus me-2"></i>Add User
                 </button>
               </div>
+              </div>
             </form>
-          </div>
+          
         </div>
       </div>
       
@@ -388,7 +393,30 @@
       </div>
     </div>
   </div>
-  
+  <script>
+    function addsubject()
+    {
+      const assignedSubjects = [];
+      const entryDiv = document.getElementById('entry');
+      const lastEntry = entryDiv.lastElementChild;
+      const subjectSelect = last.querySelector('#allowedSubjects').value;
+      const classSelector = last.querySelector('#classSelector').value;
+
+      if(subjectSelect && classSelector){
+        assignedSubjects.push({ subject: subjectSelect, class: classSelector });
+        const newEntry = lastEntry.cloneNode(true);
+        newEntry.querySelector('#allowedSubjects').selectedIndex = 0;
+        newEntry.querySelector('#classSelector').selectedIndex = 0;
+        
+        entriesDiv.appendChild(newEntry);
+      }
+       else {
+        alert('Please select both subject and class');
+      }
+
+      console.log(assignedSubjects);
+    }
+  </script>
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   
